fix bg bug on mobile

--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -176,7 +176,7 @@ body {
   =======================================================*/
 
 .main-header {
-  height: 88vh;
+  height: 89vh;
   width: 100%;
   background-image: url("../img/application-calculator.png");
   background-repeat: no-repeat;
